--- a/DIW/Practica12/css/animaciones.css
+++ b/DIW/Practica12/css/animaciones.css
@@ -10,6 +10,10 @@ article:hover{
     -webkit-box-shadow: 0px 0px 15px 6px rgba(119, 119, 119, 0.85);
 }
 
+.servicios:hover{
+    background-color: #282e28;
+    color: white;
+}
 nav ul li a,nav ul li, footer,article ul li{
     transition: all 0.3s;
 }
