--- a/Tema 6/PluginJQuery/css/style.css
+++ b/Tema 6/PluginJQuery/css/style.css
@@ -2,10 +2,11 @@ form{
     padding: 20px;
 }
 .formulario{
-    width: 35%;
+    width: 50vh;
+    margin: 0 auto;
     border: 1px solid #000;
     align-items: center;
 }
-input, label{
-    margin-bottom: 10px;
+input, p{
+    width: 100%;
 }
