--- a/Tema 6/jQueryV2Buscaminas/css/style.css
+++ b/Tema 6/jQueryV2Buscaminas/css/style.css
@@ -8,7 +8,6 @@ main{
     justify-content: center;
     align-items: center;
 }
-
 .casilla {
     background-color: rgb(5, 121, 254);
     width: 45px;
@@ -19,17 +18,21 @@ main{
     font-size: 2em;
     border: 1px solid black;
 }
-#elegir{
+.casilla:hover{
+    background-color: rgba(115, 180, 255, 0.986);
+    transition-delay: 0.1s;
+}
+#elegir {
     display: flex;
-    width: 100vh;
+    width: 40%;
+    justify-content: space-around;
     border: 1px solid black;
+    background-color: bisque;
+    margin-bottom: 15px;
 }
 .marcador{
-    border: 1px solid black;
     display: flex;
     padding: 10px 30px 10px 30px;
-    margin-bottom: 15px;
-    background-color: rgb(4, 87, 0);
 }
 .marcador img{
     width: 10vh;
@@ -37,25 +40,22 @@ main{
 }
 #eleccion,.seleccion{
     display: flex;
-    width: 60vh;
     flex-direction: row;
-    *justify-content: space-between;
     justify-content: center;
 }
-select{
+select {
+    margin-top: 10px;
     width: 25vh;
     height: 30px;
     font-size: 20px;
     border-radius: 20px;
 }
 #reiniciar{
-    transition: 0.3s ease-in-out;
-    background-color: wheat;
+    transition: 0.3s all ease-in-out;
 }
 #reiniciar:hover{
-    transition: 0.3s ease-in-out;
+    transition: 0.3s all ease-in-out;
     animation: rotate 2s linear infinite;
-    
 }
 @keyframes rotate{
     to{ transform: rotate(-360deg); }
@@ -67,4 +67,14 @@ select{
     height: 30px;
     font-size: 20px;
 }
-
+#mensajeFinal{
+    font-family: "Times New Roman", Times, serif;
+    width: auto;
+    background-color: #e71616;
+    color: #fff;
+    padding: 20px;
+    font-size: 2em;
+    text-shadow: 0 0 16px #000;
+    position: absolute;
+    display: none;
+}
